[project]
name = "anlp"
version = "0.1.0"
description = "Topic modeling for song lyrics: OCTIS comparison and BERTopic with human-readable topics"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bertopic>=0.17.4",
    "octis>=1.8.3",
    "scikit-learn>=1.3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "kaggle>=1.6",
    "tqdm>=4.65",
    "transformers>=4.36",
    "torch>=2.0",
    "bitsandbytes>=0.41",
    "accelerate>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
anlp = "anlp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anlp"]